[tool.poetry]
name = "pylettize"
version = "0.1.0"
description = "Customize the palette of any input image"
authors = ["Frans Johansson <fransjohansson98@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
scikit-image = "^0.20.0"
docopt = "^0.6.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-mypy = "^17.8.0"
pytest = "^7.2.2"
black = "^23.1.0"
mypy = "^1.1.1"
tox = "^4.4.8"
isort = "^5.12.0"
pydocstyle = "^6.3.0"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.3.23"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.0.0"
pre-commit = "^3.2.1"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
pylettize = "pylettize.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
