[metadata]
name = pylettize
version = 0.1-pre
description = Apply a color palettes to pictures
author = Frans Johansson
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    numpy ==1.23.4
    scikit-image ==1.9.3
python_requires = >=3.8
zip_safe = False

[flake8]
# Conform with the black line length
max_line_length=88 

# We don't want the mypy success message to bubble up as an error
extend_ignore=T499

# This is requried by the mypy plugin to work as intended
mypy_config=setup.cfg

[mypy]
# Default mypy config copied from: https://github.com/ambv/flake8-mypy/blob/master/mypy_default.ini
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform=linux

# flake8-mypy expects the two following for sensible formatting
show_column_numbers=True
show_error_context=False

# suppress error messages from unrelated files
follow_imports=skip

# since we're ignoring imports, writing .mypy_cache doesn't make any sense
cache_dir=/dev/null

# suppress errors about unsatisfied imports
ignore_missing_imports=True

# allow untyped calls as a consequence of the options above
disallow_untyped_calls=False

# allow returning Any as a consequence of the options above
warn_return_any=False

# treat Optional per PEP 484
strict_optional=True

# ensure all execution paths are returning
warn_no_return=True

# lint-style cleanliness for typing needs to be disabled; returns more errors
# than the full run.
warn_redundant_casts=False
warn_unused_ignores=False

# The following are off by default since they're too noisy.
# Flip them on if you feel adventurous.
disallow_untyped_defs=False
check_untyped_defs=False

[tool:pytest]
# The tests are all placed in the root directory for now
testpaths=.

# Look for tests in the single test file for now
python_files=test_pylettize.py

# Any function in the test file is a test
python_functions=test_*
